Changelog Notes:
Adjusted Hardy regeneration rate.
Added Sandbox Options for:
-Hardy Regeneration Rate
-Pack Mule Weight Change
-Pack Mouse Weight Change
-Default Weight Change
-Global Weight Modifier.
-Gymgoer
-Superimmune
-Grave Robber
-Indefatigable
-Gordanite
Gordanite now scales off Long Blunt and is now less OP at lower levels.
Fixed Localization Bug in Gordanite.