@@ -11,5 +11,8 @@ Added Sandbox Options for:
 -Grave Robber
 -Indefatigable
 -Gordanite
+-Evasive
 Gordanite now scales off Long Blunt and is now less OP at lower levels.
 Fixed Localization Bug in Gordanite.
+Evasive now properly removes Zombification on attacks that were dodged.
+Evasive now checks for Lacerations.
